Fix admin notice spacing issue

--- a/resources/assets/admin/css/admin_notices.scss
+++ b/resources/assets/admin/css/admin_notices.scss
@@ -43,7 +43,7 @@
 }
 #ff_notice_review_query {
   background: #fff;
-  margin: 24px 24px 14px 24px;
+  margin: 24px 24px 0 24px;
   border-left: 4px solid $--color-success;
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(30, 31, 33, 0.08);
